# mechinterp-dev

./: LICENSE  README.md
cloud_dev/: Dockerfile  README.md  build.sh
cloud_dev/base_uv_env/: pyproject.toml
cloud_dev/init/: config.sh  jupyter.sh  pydrive.yaml  rclone.conf  tailscale_init.sh
codesync/: .mutagen.yml  Dockerfile  README.md  build.sh  entrypoint.sh
colab/: Dockerfile  README.md  build.sh
runpod-colab/: README.md  init.sh
